Cleaned up donations (WIP)

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,9 @@ GET  /chat                      pull latest chat messages
 POST /chat                      push new chat messages
 
 to be continued...
+
+DB SETUP
+
+db.query("CREATE TABLE IF NOT EXISTS `es_donations` (`id` int unsigned not null AUTO_INCREMENT, paid bool, claimed bool, name varchar(255), email varchar(255), steamid varchar(255), amount int unsigned, ip varchar(255), payment_id varchar(255), payer_id varchar(255), PRIMARY KEY (`id`), UNIQUE KEY `id` (`id`)) ENGINE=MyISAM DEFAULT CHARSET=latin1;",function(){
+  console.log("Successfully setup donation tables.");
+});
