--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,6 @@
-TODO LIST
+TODO LIST / PROJECT MISC SHIT
 
-GET  /loadingurl                display loading url (moustache.js and socket.io)
-GET  /player/sid/rank?server=x     return rank, if no server id is given, return the global (serverid 0) only
-POST /player/sid/rank?server=x     push rank
-GET  /player/sid/fields/field   get player field
-GET  /chat                      pull latest chat messages
-POST /chat                      push new chat messages
-
-to be continued...
-
-DB SETUP
-
+We don't need to run this query everytime we start the application.
 db.query("CREATE TABLE IF NOT EXISTS `es_donations` (`id` int unsigned not null AUTO_INCREMENT, paid bool, claimed bool, name varchar(255), email varchar(255), steamid varchar(255), amount int unsigned, ip varchar(255), payment_id varchar(255), payer_id varchar(255), PRIMARY KEY (`id`), UNIQUE KEY `id` (`id`)) ENGINE=MyISAM DEFAULT CHARSET=latin1;",function(){
   console.log("Successfully setup donation tables.");
 });
